# GCS

./: .gitattributes  qgcresources.qrc
cmake/: CustomOptions.cmake
src/: QGCApplication.cc  QGCApplication.h  main.cc
src/AGVView/: AGVActionBar.qml  AGVActionButton.qml  AGVCameraButton.qml  AGVChipGroup.qml  AGVDivider.qml  AGVOptionCards.qml  AGVPanelSelection.qml  AGVRightButton.qml  AGVRightSection.qml  AGVRightToggle.qml  AGVSectionHeader.qml  AGVSliderRow.qml  AGVStatDisplay.qml  AGVStatRow.qml  AGVTabButton.qml  AGVTelemetryGauge.qml  AGVTelemetryItem.qml  AGVToggleRow.qml  AGVView.qml  BigOptionBtn.qml  CMakeLists.txt  HarvestPanel.qml  SowPanel.qml  SprayPanel.qml  SpreadPanel.qml
src/Comms/: AutoConnector.cc  AutoConnector.h  CMakeLists.txt  LinkManager.h
src/QmlControls/: FlyViewToolBar.qml  MainStatusIndicator.qml  QGCPalette.cc
src/UI/: MainWindow.qml
src/UI/toolbar/: SelectViewDropdown.qml
